refactor: 使用URI和TypeReference改进代码健壮性
- 将URL替换为URI以增强URL构建的安全性
- 引入TypeReference避免Jackson反序列化的类型擦除问题